--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.szebi</groupId>
-    <artifactId>ControlOptimilizationModule</artifactId>
+    <artifactId>optimization</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ControlOptimilizationModule</name>
-    <description>ControlOptimilizationModule</description>
+    <name>optimization</name>
+    <description>optimization</description>
     <url/>
     <licenses>
         <license/>
@@ -39,6 +39,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
 
